tests/functional/lang/eval-fail-set.err.exp
error: undefined variable 'x'
       at /pwd/lang/eval-fail-set.bsd:1:3:
            1| 8.x
             |   ^
            2|
